--- a/editor/initial_code/python_3.tmpl
+++ b/editor/initial_code/python_3.tmpl
@@ -2,7 +2,7 @@
 {% block env %}{% endblock env %}
 
 {% block start %}
-def unique_emails(emails:list) -> int:
+def unique_emails(emails:list[int]) -> int:
     # your code here
     return 0
 {% endblock start %}
